Fix spacing on social buttons

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -593,10 +593,6 @@ button.twitter-intent {
   text-align: center
 }
 
-.social-buttons>a {
-  margin-right: 1em
-}
-
 .social-buttons .twitter-intent img {
   width: 28px;
   vertical-align: top
